# advent-of-code

./: .gitignore  README.md  pyproject.toml
.githooks/: pre-push
hooks/: pre-commit
src/aoc/: cli.py  puzzle_manager.py  utilities.py
src/aoc/2020/: day_01.py  day_02.py
src/aoc/2021/: day_01.py  day_25.py
src/aoc/2022/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py
src/aoc/2023/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py
src/aoc/2024/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py
src/templates/: day_n.py.template  test_day_n.py.template
tests/: conftest.py
tests/integration/: test_authenticator_session.py  test_cli.py
tests/unit/: test_authenticator_session.py  test_cli.py  test_github_session.py  test_object_types.py  test_puzzle_manager.py  test_utilities.py
tests/unit/2020/: test_day_01.py  test_day_02.py
tests/unit/2021/: test_day_01.py  test_day_25.py
tests/unit/2022/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py
tests/unit/2023/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py  test_day_09.py
tests/unit/2024/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py
